# VyVK

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
CMake/: Dependencies.cmake
Data/OldShaders/: PBR_OLD.frag
Data/OldShaders/GLSL/: Skybox.frag  Skybox.vert
Data/OldShaders/Old/: BloomDownsample.comp  BloomThreshold.comp  BloomUpsample.comp  BrdfLut.comp  EquirectToCube.comp  IrradianceConvolution.comp  PointLight.frag  PointLight.vert  PrefilterEnvironment.comp  SSAO.comp  Skybox.frag  Skybox.vert
Data/OldShaders/Slang/: CMakeLists.txt  PointLight.slang  PostProcess.comp  Skybox.slang
Data/OldShaders/Slang/Bloom/: BloomDownsample.slang  BloomThreshold.slang  BloomUpsample.slang
Data/OldShaders/Slang/IBL/: BRDFLUT.slang  EquirectToCube.slang  IrradianceConvolution.slang  PrefilterEnvironment.slang
Data/OldShaders/Slang/Modules/: Bindless.slang  Constants.slang  Geometry.slang  IBL.slang  PBR.slang  TBN.slang
Data/OldShaders/Slang/PBR/: DefaultGeometry.slang  MeshGeometry.slang  MeshGeometryBindless.slang  PBRLighting.slang
Data/Shaders/: CMakeLists.txt  Grid.frag  Grid.vert  HIZGenerate.comp  IrradianceMap.comp  Material.frag  Material.vert  Misc.txt  PBR.frag  PBR.vert  SimpleShader.frag  SimpleShader.vert  Skybox.frag  Skybox.vert
Data/Shaders/Lighting/: DirectionalLight.vert  PointLight.frag  PointLight.vert  SpotLight.frag  SpotLight.vert
Data/Shaders/PostProcess/: Blur.frag  Blur.vert  BrightnessExtract.frag  BrightnessExtract.vert  PostProcess.frag  PostProcess.vert
Data/Shaders/Shadows/: CubeShadow.frag  CubeShadow.vert  Shadow.frag  Shadow.vert  ShadowMap.frag  ShadowMap.vert
Source/Vy/: Engine.cpp  Engine.h  Globals.h  Main.cpp
Source/Vy/Asset/: Asset.h  AssetManager.cpp  AssetManager.h  AssetManager.inl
Source/Vy/Core/: DataBuffer.h  FrameRateController.h  Project.cpp  Project.h  Time.cpp  Time.h  Window.cpp  Window.h
Source/Vy/Core/Event/: Event.h
Source/Vy/Core/File/: FileSystem.cpp  FileSystem.hpp
Source/Vy/Core/Input/: Input.cpp  Input.h  InputCode.h  InputMapper.h
Source/Vy/Core/Platform/: Platform.Win32.h  Platform.h
Source/Vy/GFX/: Context.cpp  Context.h  FrameInfo.h  Renderer.cpp  Renderer.h
Source/Vy/GFX/Backend/: Descriptors.cpp  Descriptors.h  Device.cpp  Device.h  Pipeline.cpp  Pipeline.h  Swapchain.cpp  Swapchain.h
Source/Vy/GFX/Resources/: Cubemap.cpp  Cubemap.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PBRMaterial.h  ShadowMap.cpp  ShadowMap.h  Skybox.cpp  Skybox.h  StaticMesh.cpp  StaticMesh.h  Texture.cpp  Texture.h
Source/Vy/Managers/: MeshManager.cpp  MeshManager.h  ResourceManager.cpp  ResourceManager.h  TextureManager.cpp  TextureManager.h
Source/Vy/Managers/Lighting/: LightManager.cpp  LightManager.h
Source/Vy/Math/: Math.cpp  Math.h
Source/Vy/Scene/: Camera.cpp  Camera.h  Environment.cpp  Environment.h  Scene.cpp  Scene.h
Source/Vy/Scene/ECS/: Components.h  Entity.cpp  Entity.h  EntityHandle.h
Source/Vy/Scripting/: EntityScript.h  ScriptManager.cpp  ScriptManager.h
Source/Vy/Scripting/Scripts/: CameraController.cpp  (+5 more)
Source/VyLib/: VyLib.h
Source/VyLib/Common/: EnumFlags.h  IdentifierTag.h  Math.h  Numeric.h  Result.cpp  Result.h  VyUUID.cpp  VyUUID.h
Source/VyLib/Core/: Assert.h  Defines.h  Exceptions.h  VyHandle.h  VyLogger.cpp  VyLogger.h
Source/VyLib/Graph/: VyDAGraph.cpp  VyDAGraph.h
Source/VyLib/STL/: Atomic.h  Chrono.h  Containers.h  Mutex.h  Path.h  Pointers.h  String.h  Utility.h
Source/VyLib/Serialization/: Serializer.h
Source/VyLib/Util/: Executor.cpp  Executor.h  Hash.h
(+106 files in other folders)
